fixes padding on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -16,7 +16,6 @@ hr {
 border-radius: 10px;
 background: black;
 }
-
 .relative {
 	position: relative;
 }
@@ -139,7 +138,8 @@ a:hover + .dropdown {
 	text-transform: uppercase;
 }
 .portfolio-body h3 {
-padding-top: 1rem
+	padding-top: 1rem;
+	padding-left: 0.5rem;
 }
 .overlay-label {
 	background: #4A90E2;
@@ -228,7 +228,7 @@ img {
 	margin-bottom: 1rem;
 }
 .thumbnail {
-	margin: 1rem 0;
+	margin: 1rem;
 }
 .writing-page .thumbnail {
 	background: white
@@ -242,6 +242,7 @@ img {
 	bottom: 0;
 	background: rgba(0,0,0,.7);
 }
+
 .pubs-page .thumbnail-overlay {
 	padding: .5em;
 	display: none;
@@ -467,6 +468,7 @@ input[type=checkbox]:checked ~ [for^="read_more"] span:last-of-type {
 	.portfolio-img {
 		width: 75%;
 	}
+
 	/*.portfolio-label {
 		font-size: 2vw !important;
 	}*/
@@ -476,6 +478,7 @@ input[type=checkbox]:checked ~ [for^="read_more"] span:last-of-type {
 		margin: 1rem auto;
 		width: 50%;
 	}
+
 	/*.portfolio-label {
 		font-size: 4.5vw !important;
 	}*/
